--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -20,7 +20,7 @@
 </div>
 <hr>
 <h2 class="gradient-text">See what's trending</h2>
-<div class="row">
+<div class="row ml-4">
 {% if posts %}
 {% for famous in posts %}
   
