--- a/templates/home/show_following.html
+++ b/templates/home/show_following.html
@@ -19,7 +19,7 @@
                         <img src="{{f.image}}" style="width: 80px; height: 80px;" class="rounded-circle">
                     </div>
                     <div class="col-10 mt-4 display-3">
-                        <p style="font-size: 20px;"><b>{{f.username}}</b></p>
+                        <p style="font-size: 20px;"><a style="text-decoration: none; color: white;"href="{% url 'users' slug=f.username %}"><b>{{f.username}}</b></a></p>
                     </div>
                 </div>
             </td>
