Business API working

--- a/templates/business_dashboard/base.html
+++ b/templates/business_dashboard/base.html
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="chart_container_fill col-12 mx-3">
-            <h2>Monthly Gained Followers</h2>
+            <h2>Total Gained Followers</h2>
             <div class="row">
               <div class="col-8 chart_sub_container_fill">
                 <canvas
@@ -51,7 +51,8 @@
                 <div class="side_container_1">
                 <h2>Notes</h2>
                 <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </li>
+                <li>These insights could be predicted on the machine learning models which would analyze your your post and would try to spot your face and predict your age and store the same in the database</li><br>
+                <li>Currently we have not developed this.</li>
                 </ul>
                 </div>
               </div>
