--- a/templates/business_dashboard/dashboard_base.html
+++ b/templates/business_dashboard/dashboard_base.html
@@ -22,9 +22,9 @@
     <header
       class="navbar navbar-dark sticky-top bg-dark myclass flex-md-nowrap p-0 shadow"
     >
+    
       <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#"
-        >SocialHub Business</a
-      >
+        >SocialHub Business</a><h5 id="username">{{user.get_username}}</h5>
       <button
         class="navbar-toggler position-absolute d-md-none collapsed"
         type="button"
@@ -99,5 +99,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </body>
 </html>
