--- a/templates/ViewPost/index.html
+++ b/templates/ViewPost/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>View Post</title>
   </head>
 
   <body>
@@ -25,7 +25,8 @@
         <div class="col-3" style="border: 2px solid black">
           <div class="col">
             <div class="row-1 mt-2" >
-              <b style="font-size: 25px; color: #ed428a;">{{owner}}</b>
+              <b style="font-size: 15px; color: #ed428a;">{{owner}}</b><br>
+              {{caption}}
             </div>
             <hr>
             <div class="row-8" style="max-height: 470px; height:
