--- a/templates/home/show_users.html
+++ b/templates/home/show_users.html
@@ -132,7 +132,7 @@
         <div class="img-user-profile">
           <img
             class="profile-bgHome cover"
-            src="http://localhost:8000/media/home/post_images/ashim-d-silva-WeYamle9fDM-unsplash.jpg"
+            src="{{background_image}}"
           />
           <img class="avatar cover" src="{{user_image}}" alt="jofpin" />
         </div>
