design improved and bug fixes

--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -38,7 +38,7 @@
               href="http://localhost:8000/home"><b style="color: aliceblue">Home</b></a>
           </li>
           <li class="nav-item display-3 mx-3" style="font-size: 20px">
-            <a class="nav-link active" href="home/add_post/"><b style="color: aliceblue">Post</b></a>
+            <a class="nav-link active" href="http://localhost:8000/home/add_post"><b style="color: aliceblue">Post</b></a>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle display-3" href="#" id="navbarDropdown" role="button"
