--- a/templates/home/backround_image.html
+++ b/templates/home/backround_image.html
@@ -1,14 +1,17 @@
 {% extends 'home/base.html' %}
 {% block feed %}
-<h2>Add Background Image</h2>
-    <form method="POST"style="margin-left:200px;margin-top:100px" action="{% url 'add_background_image' %}" enctype="multipart/form-data">
+<div class="container gradient-text" style="margin-left:140px;margin-top:60px">
+    <h1>Add Background Image</h1>
+    <hr>
+</div>
+    <form method="POST"style="margin-left:155px;margin-top:10px" action="{% url 'add_background_image' %}" enctype="multipart/form-data">
     {% csrf_token %}
         {% for field in form %}
-            <label for="{{field.id_for_label}}" class="label display-3 mt-2" style="font-size:20px">
+            <label for="{{field.id_for_label}}" class="label display-3 mt-2 gradient-text-1" style="font-size:20px">
             <b>{{field.html_name}}</b></label><br>
             {{field}}<br>
         {% endfor %}
-        <button class="btn btn-success">Submit</button>
+        <button class="btn btn-success mt-3">Save Image</button>
     </form>
 {% endblock feed %}
 
