--- a/static/home/css/home.css
+++ b/static/home/css/home.css
@@ -66,9 +66,22 @@ body{
     margin-top: -10px;
 }
 
+.gradient-text {
+    background-image: linear-gradient(45deg, #d617e7, #5851DB, #833AB4, #c13584, #e02765, #d44fe0);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-
-
+.gradient-text-1 {
+    background-image: linear-gradient(135deg, #d617e7, #5851DB, #833AB4, #c13584, #e02765, #d44fe0);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 500;
+  }
 
 
 
@@ -109,3 +122,34 @@ body{
   
   .dropdown a:hover {background-color: #ddd;}
   
+
+
+  input[type=text] {
+    background-color: #f6f6f6;
+    border: 1px solid black;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    /* border: 2px solid #f6f6f6; */
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+  }
+  
+  input[type=text]:focus {
+    background-color: rgb(240, 230, 230);
+    border-bottom: 2px solid #c13584;
+  }
+  
+  input[type=text]:placeholder {
+    color: #cccccc;
+  }
