--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -34,8 +34,8 @@
       <input type="text" id="login" class="fadeIn second" name="city" placeholder="City">
       <input type="text" id="login" class="fadeIn second" name="country" placeholder="Country">
       <input type="text" id="login" class="fadeIn second" name="bio" placeholder="Bio">
-      <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">
-      <input type="text" id="password" class="fadeIn third" name="c_password" placeholder="Confirm Password">
+      <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
+      <input type="password" id="password" class="fadeIn third" name="c_password" placeholder="Confirm Password">
       <input type="submit" class="fadeIn fourth" value="Sign Up">
     </form>
 
