Almost final version

--- a/templates/home/settings.html
+++ b/templates/home/settings.html
@@ -30,6 +30,66 @@
         </tr>
       </tbody>
   </table>
-<!-- Pre styled web component desgined purely in html and css.     -->
+  <br>
+<hr>
+  <h2 class="gradient-text text-center">SocialHub Business Pricing Plans</h2>
 
+<section class="py-5 ">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4">
+				<div class="card mb-5 mb-lg-0 rounded-lg shadow" style="background-image:linear-gradient(100deg,#ae87c9,#d89bbe,#df9fb4);">
+					<div class="card-header">
+						<h5 class="card-title text-white-50 text-uppercase text-center"><b>Mini</b></h5>
+						<h6 class="h1 text-white text-center">$29<span class="h6 text-white-50">/Year</span></h6>
+					</div>
+					<div class="card-body bg-light rounded-bottom">
+						<ul class="list-unstyled mb-4">
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-success"></i></span>Track followers</li>
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-success"></i></span>Track Likes</li>
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-success"></i></span>Track comments</li>
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-success"></i></span>Find out type of people who follow you</li>
+							
+						</ul>
+						<a href="{% url 'business_dashboard' %}" class="btn btn-block btn-primary text-uppercase rounded-lg py-3">Buy now</a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-lg-4">
+				<div class="card  mb-5 mb-lg-0 rounded-lg shadow" style="background-image:linear-gradient(100deg,#a264cc,#d66ca8,#d36d8f);">
+					<div class="card-header">
+						<h5 class="card-title text-white-50 text-uppercase text-center"><b>Pro</b></h5>
+						<h6 class="h1 text-white text-center">$69<span class="h6 text-white-50">/Year</span></h6>
+					</div>
+					<div class="card-body bg-light rounded-bottom">
+						<ul class="list-unstyled mb-4">
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-danger"></i></span>Advertise Products</li>
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-danger"></i></span>Track Capital</li>
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-danger"></i></span>Track Orders</li>
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-danger"></i></span>Target Advertisement</li>
+							
+						</ul>
+						<a href="{% url 'business_dashboard' %}" class="btn btn-block btn-primary text-uppercase rounded-lg py-3">Buy now</a>
+					</div>
+				</div>
+			</div>
+      <div class="col-lg-4">
+				<div class="card mb-5 mb-lg-0 rounded-lg shadow" style="background-image:linear-gradient(100deg,#833AB4,#c13584,#e1306c);">
+					<div class="card-header">
+						<h5 class="card-title text-white-50 text-uppercase text-center"><b>Pro Max</b></h5>
+						<h6 class="h1 text-white text-center">$100<span class="h6 text-white-50">/Year</span></h6>
+					</div>
+					<div class="card-body bg-light rounded-bottom">
+						<ul class="list-unstyled mb-4">
+							<li class="mb-3"><span class="mr-3"><i class="fas fa-check text-warning"></i></span>Unlock your full potential get the benifits of Mini and Pro</li>
+						
+						</ul>
+						<a href="{% url 'business_dashboard' %}" class="btn btn-block btn-primary text-uppercase rounded-lg py-3">Buy now</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 {% endblock feed %}
