--- a/templates/home/show_users.html
+++ b/templates/home/show_users.html
@@ -193,7 +193,7 @@
                 <div class="col-2" style="margin-right: 20px">
                   <i class="fas fa-heart fa-lg">{{post.likes}}</i>
                 </div>
-                <div class="col-1"><i class="fas fa-comment fa-lg">13</i></div>
+                <div class="col-1"><i class="fas fa-comment fa-lg">{{post.comments}}</i></div>
               </div>
             </div>
           </div>
